--- a/addons/web/static/src/less/controlpanel.less
+++ b/addons/web/static/src/less/controlpanel.less
@@ -10,6 +10,11 @@
             padding: 5px 15px 5px 15px;
         }
 
+        .oe-button-column button {
+            background-color: @odoo-brand-optional;
+            border-color: @odoo-brand-optional;
+        }
+
         .oe_list_buttons {.oe_list_save, .oe_list_discard {display: none;}}  // Needed by the webclient
         // FIXME: Move me to view_list.less
 
