--- a/addons/web/static/src/less/webclient_layout.less
+++ b/addons/web/static/src/less/webclient_layout.less
@@ -2,7 +2,7 @@
 // Base layout
 // ------------------------------------------------------------------
 // Variables
-@navbar-height: 33px;
+@navbar-height: 40px;
 @o-menu-width: 220px;
 @o-menu-width-mobile: 100%;
 // Note: tooltip's z-indexes are the highest z-indexes
@@ -83,6 +83,7 @@ html {
                 bottom: 0;
                 right: 0;
                 z-index: @o-overlay-zindex;
+                overflow: hidden;
             }
 
             .o-web-client-row {
