--- a/addons/planner/static/src/less/planner.less
+++ b/addons/planner/static/src/less/planner.less
@@ -1,4 +1,5 @@
 // FONTS
+//FIXME: move to utils?
 
 @font-face {
     font-family: 'Simple-Line-Icons';
@@ -174,11 +175,13 @@
 }
 
 
+
+// FIXME: gross
 .navbar {
     .oe_planner_systray {
         width: 100px;
         height: 13px;
-        margin: 10px 0 0 0;
+        margin: 14px 10px 0 0;
         div.oe_planner_progress {
             cursor: pointer;
         }
