--- a/addons/web/views/webclient_templates.xml
+++ b/addons/web/views/webclient_templates.xml
@@ -210,6 +210,7 @@
                         <t t-foreach="menu['children']" t-as="menu">
                             <span t-esc="menu['name']"/>
                             <t t-call="web.menu_secondary_submenu"/>
+                            <hr t-if="not menu_last"/>
                         </t>
                     </div>
                 </t>
