--- a/addons/portal/views/portal.xml
+++ b/addons/portal/views/portal.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-    <data>
+<odoo>
         <template id="assets_backend" name="portal assets" inherit_id="web.assets_backend">
             <xpath expr="." position="inside">
                 <link rel="stylesheet" href="/portal/static/src/css/portal.css"/>
             </xpath>
         </template>
-    </data>
-</openerp>
+</odoo>
