--- a/addons/website_quote/views/website_quotation.xml
+++ b/addons/website_quote/views/website_quotation.xml
@@ -446,7 +446,7 @@
         <section t-if="quotation.options" id="options">
             <h1 class="page-header">Options</h1>
         </section>
-        <section id="options">
+        <section t-if="quotation.options" id="options">
             <table class="table table-hover wq-table">
                 <thead>
                     <tr>
