[WIP] mail: timeline view refactoring for messaging

--- a/addons/web_timeline/static/src/css/timeline.css
+++ b/addons/web_timeline/static/src/css/timeline.css
@@ -70,6 +70,7 @@
 
         .openerp .oe_timeline .oe_tl_thread_parent {
             width: 870px;
+            margin-top: 2px;
             vertical-align: middle;
         }
 
@@ -1049,6 +1050,4 @@
     .openerp .oe_tl_followers .oe_subtype {
         padding-left: 5px;
     }
-
-
-
+    
