[WIP] mail: timeline view add sidebar

--- a/addons/web_timeline/static/src/css/timeline.css
+++ b/addons/web_timeline/static/src/css/timeline.css
@@ -18,6 +18,11 @@
         padding-bottom: 15px; 
     }
 
+    .openerp .oe_timeline.oe_tl_inbox .oe_thread {
+        width: 900px;
+        display:inline-block;
+    }
+
     .oe-view-manager-view-timeline {
         background-color: #f0eeee;
     }
@@ -1051,3 +1056,20 @@
         padding-left: 5px;
     }
     
+
+
+/* ----------------------- SIDEBAR ----------------------- */
+
+    .openerp .oe_timeline .oe_tl_inbox_aside {
+        margin: 17px;
+        position: relative;
+        display: inline-block;
+        vertical-align: top;
+        width: 150px;
+    }
+
+    .openerp .oe_timeline .oe_tl_inbox_aside .oe_tl_sidebar {
+        width: 120px;
+        display: inline-block;
+        border: solid 1px red;
+    }
