--- a/addons/web_timeline/views/timeline.xml
+++ b/addons/web_timeline/views/timeline.xml
@@ -8,6 +8,7 @@
 				
                 <script type="text/javascript" src="/web_timeline/static/src/js/timeline_view.js"></script>
                 <script type="text/javascript" src="/web_timeline/static/src/js/timeline_followers.js"></script>
+                <script type="text/javascript" src="/web_timeline/static/src/js/timeline_suggestions.js"></script>
             </xpath>
         </template>
     </data>
