--- a/addons/web_timeline/static/src/css/timeline.css
+++ b/addons/web_timeline/static/src/css/timeline.css
@@ -1089,14 +1089,32 @@
 
     .openerp .oe_sidebar_suggestion .oe_suggest_items .oe_suggested_item {
         border-radius: 2px;
-        width: 100%;
         margin-left: 10px;
         min-height: 67px; 
-        overflow: hidden; 
         white-space: nowrap;
     }
 
-    .openerp .oe_sidebar_suggestion .oe_suggest_items .oe_suggested_item .oe_suggested_name {
-        width: 115px;
+    .openerp .oe_sidebar_suggestion .oe_suggest_items .oe_suggested_item_image {
+        float: left;
+        padding-right: 10px;
+    }
+
+    .openerp .oe_sidebar_suggestion .oe_suggest_items .oe_suggested_item_image img {
+        border-radius: 2px;
+        border: solid 1px rgba(0,0,0,0.03);
+    }
+
+    .openerp .oe_sidebar_suggestion .oe_suggest_items .oe_suggested_item_content button {
+        margin-top: 10px;
+    }
+
+    .openerp .oe_sidebar_suggestion .oe_suggest_items .oe_suggested_item_content .oe_suggestion_item_name {
+        display: inline-block;
         text-overflow: ellipsis;
+        overflow: hidden;
+        max-width: 110px;
+    }
+
+    .openerp .oe_sidebar_suggestion .oe_suggest_items .oe_suggested_item_content a.oe_suggestion_item_name {
+        color: #337ab7;
     }
