--- a/addons/account/views/account_unit_test.xml
+++ b/addons/account/views/account_unit_test.xml
@@ -6,7 +6,7 @@
             <field name="currency_id" ref="base.EUR"/>
             <field name="company_id" ref="base.main_company"/>
             <field name="partner_id" ref="base.res_partner_1"/>
-            <field name="journal_id" ref="account.expenses_journal"/>
+            <field name="journal_id" search="[('type', '=', 'purchase')]"/>
             <field name="state">draft</field>
             <field name="type">in_invoice</field>
             <field name="account_id" ref="account.a_pay"/>
