[WIP] mail: timeline view - side bar

--- a/addons/web_timeline/static/src/css/timeline.css
+++ b/addons/web_timeline/static/src/css/timeline.css
@@ -1076,14 +1076,16 @@
         padding-bottom: 7px;
     }
 
-    .openerp .oe_timeline .oe_tl_inbox_aside .oe_suggest_title h2 {
+    .openerp .oe_timeline .oe_tl_inbox_aside .oe_suggest_title span {
         background-color: #f0eeee;
-        width: 138px;
+        display: inline-block;
+        height: 25px;
+        vertical-align: middle;
         font-size: 14px;
         font-weight: bold;
         margin-left: 10px;
-        margin-top: -9px;
-        padding-left: 6px;
+        margin-top: -20px;
+        padding-left: 5px;
         padding-right: 5px;
     }
 
@@ -1115,6 +1117,6 @@
         max-width: 110px;
     }
 
-    .openerp .oe_sidebar_suggestion .oe_suggest_items .oe_suggested_item_content a.oe_suggestion_item_name {
+    .openerp .oe_timeline .oe_tl_inbox_aside a {
         color: #337ab7;
-    }
+}   }
