--- a/addons/gamification/static/src/css/gamification.css
+++ b/addons/gamification/static/src/css/gamification.css
@@ -51,6 +51,163 @@
 .openerp .oe_form td .oe_no_padding {
   margin-left: -6px;
 }
+
+/**********/
+
+.openerp .oe_timeline .oe_tl_inbox_aside .oe_gamification_suggestion {
+  background-color: #d3def1;
+}
+
+.openerp .oe_timeline .oe_tl_inbox_aside .oe_gamification_suggestion ul {
+  padding-left: 15px;
+}
+
+.openerp .oe_timeline .oe_goal {
+  background-color: #f0eeee;
+  border: solid 1px #CACACA;
+  margin-top: 20px;
+  padding-left: 10px;
+}
+
+.openerp .oe_timeline .oe_goal .oe_update_challenge.fa, .openerp .oe_timeline .oe_goal .oe_goal_action.fa {
+  visibility: hidden;
+  font-size: 16px;
+  float: right;
+  position: relative;
+}
+
+.openerp .oe_timeline .oe_goal div:hover > .oe_update_challenge,
+.openerp .oe_timeline .oe_goal div:hover > .oe_goal_action, 
+.openerp .oe_timeline .oe_goal th:hover > .oe_goal_action {
+  visibility: visible;
+}
+
+.openerp .oe_timeline .oe_tl_inbox_aside .oe_gamification_title span {
+  background-color: #f0eeee;
+  display: inline-block;
+  height: 25px;
+  vertical-align: middle;
+  font-size: 14px;
+  font-weight: bold;
+  margin-top: -20px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.openerp .oe_timeline .oe_goal .oe_goals_list {
+  padding-left: 0;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.openerp .oe_timeline .oe_goal .oe_goals_list .oe_no_progress div {
+  display: inline-block;
+}
+
+.openerp .oe_timeline .oe_goal .oe_goals_list .oe_no_progress::before {
+  content: "•";
+  padding-right: 4px;
+}
+
+.openerp .oe_timeline .oe_goal .oe_goals_list .oe_no_progress.oe_goal_reached::before {
+  content: "✓";
+  padding-right: 0;
+  margin-left: -2px;
+}
+
+.openerp .oe_timeline .oe_goal .oe_goals_list .oe_no_progress.oe_goal_reached .oe_cell {
+  text-decoration: line-through;
+}
+
+.openerp .oe_timeline .oe_goal .oe_goals_list .oe_cell.oe_goal_current {
+  font-size: 150%;
+  font-weight: bold;
+  min-width: 50px;
+  padding: 0 5px;
+}
+
+.openerp .oe_timeline .oe_goal .oe_goals_list .oe_goal_outer_box {
+  display: inline-block;
+  position: relative;
+  z-index: 0;
+  vertical-align: middle;
+  width: 100%;
+  border: solid 1px rgba(0, 0, 0, 0.03);
+  border-radius: 2px;
+}
+
+.openerp .oe_timeline .oe_goal .oe_goals_list .oe_goal_outer_box.oe_no_progress {
+  border: none;
+}
+
+.openerp .oe_timeline .oe_goal .oe_goals_list .oe_goal_progress_background {
+  background-color: white;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: -2;
+  top: 0;
+  left: 0;
+}
+
+.openerp .oe_timeline .oe_goal .oe_goals_list .oe_goal_progress {
+  background-color: #F2F7FF;
+  position: absolute;
+  height: 100%;
+  width: 0;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
+
+.openerp .oe_timeline .oe_goal .oe_goals_list .oe_thead {
+  font-weight: normal;
+  padding: 5px;
+  text-align: center;
+}
+
+.openerp .oe_mail_wall .oe_goal .oe_goals_list .oe_cell {
+  padding: 3px 0;
+}
+
+.openerp .oe_timeline .oe_table.oe_goals_list .col0 {
+  font-size: 200%;
+  font-weight: bold;
+  width: 25px;
+  text-align: center;
+}
+
+.openerp .oe_timeline .oe_table.oe_goals_list .col1 {
+  padding: 0 5px;
+}
+
+.openerp .oe_timeline .oe_table.oe_goals_list .col2 {
+  width: auto;
+}
+
+.openerp .oe_timeline .oe_user_avatar {
+  width: 24px;
+  padding-right: 5px;
+}
+
+.openerp .oe_timeline .oe_table {
+  display: table;
+}
+
+.openerp .oe_timeline .oe_row {
+  display: table-row;
+}
+
+.openerp .oe_timeline .oe_cell {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+
+
+/*********/
+
 .openerp .oe_mail_wall .oe_mail_wall_aside {
   margin-top: 15px;
   position: relative;
@@ -68,6 +225,7 @@
 .openerp .oe_mail_wall .oe_mail_wall_aside .oe_gamification_suggestion ul {
   padding-left: 15px;
 }
+
 .openerp .oe_mail_wall .oe_mail_wall_aside h4, .openerp .oe_mail_wall .oe_mail_wall_aside .oe_goals_list .oe_thead {
   text-align: center;
   padding-bottom: 15px;
@@ -76,6 +234,7 @@
   border-bottom: solid 5px white;
   border-radius: 2px;
 }
+
 .openerp .oe_mail_wall .oe_goal {
   border-bottom: solid 3px white;
   padding: 5px 10px;
