[WIP] mail: timeline view - side bar

--- a/addons/web_timeline/static/src/css/timeline.css
+++ b/addons/web_timeline/static/src/css/timeline.css
@@ -1074,6 +1074,7 @@
         border-radius: 3px;
         padding-top: 1px;
         padding-bottom: 7px;
+        margin-bottom: 20px
     }
 
     .openerp .oe_timeline .oe_tl_inbox_aside .oe_suggest_title span {
