--- a/addons/website/views/themes.xml
+++ b/addons/website/views/themes.xml
@@ -154,7 +154,7 @@
 
 <template id="website.theme" name="Theme">
     <!-- Boostrap Fallback if server can't compute less files -->
-    <link id="bootstrap_css" rel='stylesheet' href='/web/static/lib/bootstrap/css/bootstrap.css'/>
+    <link rel="stylesheet" href='/website/static/src/less/import_bootstrap.less'/>
     <link rel="stylesheet" href='/website/static/src/css/website.css'/>
 </template>
 
