--- a/addons/payment_ogone/views/payment_acquirer.xml
+++ b/addons/payment_ogone/views/payment_acquirer.xml
@@ -14,6 +14,7 @@
                         <field name="ogone_password"/>
                         <field name="ogone_shakey_in"/>
                         <field name="ogone_shakey_out"/>
+                        <field name="ogone_alias_usage"/>
                     </group>
                 </xpath>
             </field>
