--- a/addons/website_payment/views/website_payment_templates.xml
+++ b/addons/website_payment/views/website_payment_templates.xml
@@ -2,30 +2,56 @@
 <openerp>
 <!-- Page -->
 <data>
-<template id="cc_form" name="Paypal (Test)" page="True">
-    <div class="row">
-        <h3>Paypal payment: server 2 server</h3>
-        <form class="form-horizontal col-sm-4 oe_cc" role="form">
-            <div class="form-group col-sm-8">
-                <label class="control-label" for="cc_number">Card number</label>
-                <input type="tel" id="cc_number" class="form-control"/>
-                <div class="card_placeholder"></div>
-                <div class="visa"></div>
+    <template id="assets_frontend" inherit_id="website.assets_frontend" name="Website Payment">
+      <xpath expr="." position="inside">
+          <link rel='stylesheet' href='/website_payment/static/src/css/website_payment.css'/>
+          <script type="text/javascript" src="/website_payment/static/src/js/payment_acquirer.js"></script>
+          <script type="text/javascript" src="/website_payment/static/lib/jquery.payment/jquery.payment.js"></script>
+      </xpath>
+    </template>
+
+    <template id="cc_form" name="Paypal (Test)" page="True">
+        <t t-call="website.layout">
+            <div id="wrap">
+                <div class="container">
+                    <h3>Register your credit card</h3>
+                    <p>Card numbers are stored on our provider's secure servers.</p>
+                    <div class="row">
+                        <form class="form-horizontal col-sm-4 oe_cc" role="form" method="post">
+                            <div class="form-group col-sm-8">
+                                <label class="control-label" for="cc_number">Card number</label>
+                                <input type="tel" name="cc_number" id="cc_number" class="form-control" placeholder="&#8226;&#8226;&#8226;&#8226;&#32;&#8226;&#8226;&#8226;&#8226;&#32;&#8226;&#8226;&#8226;&#8226;&#32;&#8226;&#8226;&#8226;&#8226;&#32;"/>
+                                <input type="hidden" name="cc_brand" value=""/>
+                                <div class="card_placeholder"></div>
+                                <div class="visa"></div>
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label class="control-label" for="cc_cvc">Card code</label>
+                                <input type="text" name="cc_cvc" id="cc_cvc" class="form-control" maxlength="4" placeholder="CVC"/>
+                            </div>
+                            <div class="form-group col-sm-7">
+                                <label class="control-label" for="cc_holder_name">Holder Name</label>
+                                <input type="text" name="cc_holder_name" id="cc_holder_name" class="form-control"/>
+                            </div>
+                            <div class="form-group col-sm-5">
+                                <label class="control-label" for="cc_expires_mm">Expires</label>
+                                <input type="text" name="cc_expiry" id="cc_expiry" class="form-control" maxlength="7" placeholder="MM / YY"/>
+                            </div>
+                            <div class="form-group col-sm-6" t-if='len(acquirers)>1'>
+                                <label class="control-label" for="cc_acquirer">Acquirer</label>
+                                <select name="cc_acquirer">
+                                    <t t-foreach="acquirers" t-as="acquirer">
+                                        <option t-att-value="acquirer['id']" t-esc="acquirer['name']"/>
+                                    </t>
+                                </select>
+                            </div>
+                            <div class="clearfix"></div>
+                            <button class="btn btn-primary pull-right">Add Card</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="form-group col-sm-4">
-                <label class="control-label" for="cc_cvc">Card code</label>
-                <input type="text" id="cc_cvc" class="form-control" maxlength="4" palceholder="CVC"/>
-            </div>
-            <div class="form-group col-sm-7">
-                <label class="control-label" for="cc_holder_name">Holder Name</label>
-                <input type="text" id="cc_hoder_name" class="form-control"/>
-            </div>
-            <div class="form-group col-sm-5">
-                <label class="control-label" for="cc_expires_mm">Expires</label>
-                <input type="text" id="cc_expiry" class="form-control" maxlength="7" placeholder="MM / YY"/>
-            </div>
-        </form>
-    </div>
-</template>
+        </t>
+    </template>
 </data>
 </openerp>
