work on list view

--- a/addons/web/static/src/less/webclient.less
+++ b/addons/web/static/src/less/webclient.less
@@ -5,6 +5,7 @@
 @odoo-brand-secondary: #8f8f8f;
 @odoo-brand-optional: #21b799;
 
+@odoo-main-color-muted: #a8a8a8;
 
 // ------------------------------------------------------------------
 // Bootstrap's variables
@@ -50,7 +51,15 @@
     border-bottom: 1px solid @gray-lighter;
 }
 
+.o-web-client {
+    background-color: @odoo-main-color-muted;
+}
 
+.oe-view-manager-content {
+    background-color: white;
+    margin-left: -15px;
+    margin-right: -15px;
+}
 // ------------------------------------------------------------------
 // Menus
 // ------------------------------------------------------------------
