--- a/addons/website_hr_recruitment/views/hr_job_views.xml
+++ b/addons/website_hr_recruitment/views/hr_job_views.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
-<data>
-    <record id="view_hr_job_form_website_published_button" model="ir.ui.view" >
+<odoo>
+    <record id="view_hr_job_form_inherit_published_button" model="ir.ui.view" >
         <field name="name">hr.job.form.inherit.published.button</field>
         <field name="model">hr.job</field>
         <field name="inherit_id" ref="hr_recruitment.hr_job_survey"/>
@@ -14,5 +13,4 @@
             </xpath>
         </field>
     </record>
-</data>
-</openerp>
+</odoo>
