--- a/addons/web/static/src/less/webclient.less
+++ b/addons/web/static/src/less/webclient.less
@@ -5,7 +5,9 @@
 @odoo-brand-secondary: #8f8f8f;
 @odoo-brand-optional: #21b799;
 
+@odoo-main-text-color: #666666;
 @odoo-main-color-muted: #a8a8a8;
+
 
 // ------------------------------------------------------------------
 // Bootstrap's variables
@@ -23,6 +25,7 @@
 @navbar-inverse-bg: @odoo-brand-primary;
 @navbar-inverse-link-color: white;
 @navbar-inverse-link-hover-bg: darken(@odoo-brand-primary, 10%);
+@text-color: @odoo-main-text-color;
 
 
 // ------------------------------------------------------------------
@@ -33,6 +36,10 @@
     border-right: 1px solid @gray-lighter;
     border-bottom: 1px solid @gray-lighter;
     .transition(left 0.15s);  // Slide animation
+}
+
+.o-secondary-menu {
+    box-shadow: 0px 8px 8px @odoo-main-text-color;
 }
 
 .o-menu-slide {
@@ -57,8 +64,8 @@
 
 .oe-view-manager-content {
     background-color: white;
-    margin-left: -15px;
-    margin-right: -15px;
+    margin-left: -15px;     // views are supposed to take 100% of the
+    margin-right: -15px;    // available width.
 }
 // ------------------------------------------------------------------
 // Menus
