first pass at form view redesign

--- a/addons/web/static/src/less/list_view.less
+++ b/addons/web/static/src/less/list_view.less
@@ -7,6 +7,8 @@ table.o-list-view {
 
     cursor: pointer;
 
+    background-color: white;
+    
     thead {
         background-color: @odoo-list-grey;
         color: @odoo-main-text-color;
