--- a/addons/website_quote/views/report_saleorder.xml
+++ b/addons/website_quote/views/report_saleorder.xml
@@ -8,6 +8,35 @@
             <p t-field="doc.validity_date"/>
         </div>
     </xpath>
+    <xpath expr="//div[@class='page']/p[@id='fiscal_position_remark']" position="after">
+        <div t-if="doc.options and doc.state in ['draft', 'sent']">
+            <h2>
+                <span>Options</span>
+            </h2>
+            <table class="table table-condensed">
+                <thead>
+                    <tr>
+                        <th>Product</th>
+                        <th>Description</th>
+                        <th class="text-right">Unit Price</th>
+                    </tr>
+                </thead>
+                <tbody class="sale_tbody">
+                    <tr t-foreach="doc.options" t-as="option">
+                        <td>
+                            <span t-field="option.product_id.name"/>
+                        </td>
+                        <td>
+                            <span t-field="option.name"/>
+                        </td>
+                        <td class="text-right">
+                            <span t-field="option.price_unit"/>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </xpath>
 </template>
 </data>
 </openerp>
