[IMP] website_hr : set `public_info` field of website_hr module in `hr.employee.form` view

--- a/addons/website_hr/views/website_hr_view.xml
+++ b/addons/website_hr/views/website_hr_view.xml
@@ -13,6 +13,11 @@
                     <field name="website_published" widget="website_button"/>
                 </button>
             </xpath>
+            <xpath expr="//page/group" position="inside">
+                <group>
+                    <field name="public_info"/>
+                </group>
+            </xpath>
         </field>
     </record>
 
