[FIX] website_hr : fix the height of employee team view page

--- a/addons/website/static/src/css/website.css
+++ b/addons/website/static/src/css/website.css
@@ -484,6 +484,10 @@ ul.nav-stacked > li > a {
   padding: 4px 0;
 }
 
+.box {
+  height: 300px;
+}
+
 .o_image_floating {
   width: 40%;
   margin: 4px;
