--- a/addons/website_hr/views/website_hr.xml
+++ b/addons/website_hr/views/website_hr.xml
@@ -9,7 +9,7 @@
             <div class="col-sm-12 text-center" t-if="len(employee_ids)">
                 <h2>Our Team</h2>
             </div>
-            <div t-foreach="employee_ids" t-as="employee" class="col-sm-3 col-lg-2 mt16 text-center colsize">
+            <div t-foreach="employee_ids" t-as="employee" class="col-sm-3 col-lg-2 mt16 text-center box">
                 <t t-call="website.publish_management">
                     <t t-set="object" t-value="employee"/>
                     <t t-set="publish_edit" t-value="True"/>
