[IMP] Web: view_manager attach/detach views The ViewManager template has been simplified. The ActionManager and EmbedClient templates have been removed. Basicaly 3 div levels have been removed.
The ViewManager now attaches and detaches the views instead of having a
div per view (possibly empty) in the DOM.

--- a/addons/web/static/src/less/webclient_layout.less
+++ b/addons/web/static/src/less/webclient_layout.less
@@ -68,11 +68,24 @@ html {
             height: 100%;
             padding-top: @navbar-height;
             margin-left: @o-menu-width;
+            .o-flex-display();
+            .o-flex-direction(column);
             @media (max-width: @grid-float-breakpoint) {
                 height: auto;
+                display: block;
                 margin-left: 0;
             }
-
+            .o-control-panel {
+                .o-flex(0, 0, auto);
+            }
+            .o-content {
+                .o-flex(1, 1, auto);
+                overflow: auto;
+                .o-view-manager-content > * {
+                    margin-left: -15px;  // views are supposed to take 100% of the
+                    margin-right: -15px; // available width.
+                }
+            }
             // Pseudo-element used for the overlay
             &.overlay:after {
                 content: "";
@@ -84,31 +97,6 @@ html {
                 right: 0;
                 z-index: @o-overlay-zindex;
                 overflow: hidden;
-            }
-
-            .o-web-client-row {
-                height: 100%;
-                @media (max-width: @grid-float-breakpoint) {
-                    height: auto;
-                }
-                .o-action-manager {
-                    height: 100%;
-                    .o-flex-display();
-                    .o-flex-direction(column);
-                    @media (max-width: @grid-float-breakpoint) {
-                        height: auto;
-                        display: block;
-                    }
-
-                    .o-control-panel {
-                        .o-flex(0, 0, auto);
-                    }
-
-                    .o-view-manager {
-                        .o-flex(1, 1, auto);
-                        overflow: auto;
-                    }
-                }
             }
         }
     }
