[IMP] list view: remove extra divs in header, and useless method

--- a/addons/web/static/src/less/list_view.less
+++ b/addons/web/static/src/less/list_view.less
@@ -14,14 +14,14 @@ table.o-list-view {
         color: @odoo-main-text-color;
     }
 
-    .o-sortable div:after {
+    .o-sortable:after {
         font-family: FontAwesome;
         margin-left: 5px;
     }
-    .o-sort-up div:after {
+    .o-sort-up:after {
         content: "\f0d7";
     }
-    .o-sort-down div:after {
+    .o-sort-down:after {
         content: "\f0d8";
     }
 
