--- a/addons/web/static/src/less/form_view.less
+++ b/addons/web/static/src/less/form_view.less
@@ -9,12 +9,16 @@
     }
 
     header {
-        background-color: @odoo-main-text-color;
+        background-color: white;
         width: 100%;
 
     }
 
     header > * {
         display: inline-block;
+    }
+
+    .oe_form_invisible {
+        display: none
     }
 }
