--- a/addons/web/static/src/less/form_view.less
+++ b/addons/web/static/src/less/form_view.less
@@ -4,6 +4,7 @@
     .oe_form_sheetbg, .oe_chatter {
         min-width: 650px;
         max-width: 860px;
+        margin-top: 8px;
         background-color: white;
         .center-block();
     }
@@ -11,7 +12,7 @@
     header {
         background-color: white;
         width: 100%;
-
+        box-shadow: 8px 0px 8px @odoo-main-text-color;
     }
 
     header > * {
