--- a/addons/web/static/src/less/webclient.less
+++ b/addons/web/static/src/less/webclient.less
@@ -42,6 +42,7 @@
     box-shadow: 0px 8px 8px @odoo-main-text-color;
 }
 
+
 .o-menu-slide {
     display: block;  // We use a `.navbar-toggle` for the menu toggler, keep it always visible. Hack.
     float: left;
@@ -55,7 +56,7 @@
 
 .o-control-panel {
     background-color: white;
-    border-bottom: 1px solid @gray-lighter;
+    box-shadow: 8px 0px 8px @odoo-main-text-color;
 }
 
 .o-web-client {
@@ -69,6 +70,7 @@
     .o-menu-brand {
         padding-left: 8px;
     }
+    box-shadow: 8px 0px 8px @odoo-main-text-color;
 }
 
 // Needed by the webclient
